system_tests/syntax_error/syntax_error.rss
$Resources
	Парикмахерская = Парикмахерские(Свободен, 0, 0);
	Парикмахерская.trace();
	Парикмахерская_еще = Парикмахерские(Свободен, 0, 0);
	Парикмахерская_еще.trace();
$End